--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@ body {
     width: 70%;
     margin-top: 10px;
     margin-left: 15%;
+    color: #EBB723;
+    font-family: "BP Imperial", "italic";
 }
 
 .imagen {
@@ -88,4 +90,18 @@ footer{
 }
 .caja{
     margin: 40px;
+}
+button:hover{
+    transform: scale(1.1);
+    transition: transform 0.25s;
+}
+button{
+    border: none;
+
+}
+nav ul li a{
+    color: #EBB723;
+}
+nav ul li a:hover{
+    color: #9C75EB;
 }
