--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,8 @@ body {
 .cabeza {
     background-color: #5e17eb;
     height: 100%;
-    width: 70%;
+    width: 100%;
     margin-top: 10px;
-    margin-left: 15%;
     color: #EBB723;
     font-family: "BP Imperial", "italic";
 }
@@ -101,6 +100,10 @@ button{
 nav ul li a{
     color: #EBB723;
 }
+nav ul li{
+    color: #EBB723;
+
+}
 nav ul li a:hover{
     color: #9C75EB;
 }
@@ -116,3 +119,4 @@ nav ul li a:hover{
 .modallink{
     text-decoration: wavy; !important
 }
+
